# pfe-2021-2022-navia

./: Meetings-HFB.txt  README.md  dmoz-cscluster  packages.launch.py  run_packages.sh
anafi/: package.xml  setup.cfg  setup.py
anafi/anafi/: anafi_driver.py  anafi_tf_broadcaster.py  utils.py
anafi/config/: params.yaml
anafi/launch/: driver.launch.py
anaficontroller/: package.xml  setup.cfg  setup.py
anaficontroller/anaficontroller/: controller.py
anaficontroller/config/: params.yaml
anaficontroller/launch/: controller.launch.py
bag_recorder_nodes_py/: package.xml  setup.py
bag_recorder_nodes_py/bag_recorder_nodes_py/: data_generator_node.py  simple_bag_recorder.py
bag_recorder_nodes_py/my_bag/: my_bag_0.db3
bag_recorder_nodes_py/my_bags/: metadata.yaml
camerasetup/: package.xml  setup.cfg  setup.py
camerasetup/camerasetup/: camerainfo.py
camerasetup/config/: params.yaml
camerasetup/launch/: camera.launch.py
manageimage/: package.xml  setup.cfg  setup.py
manageimage/config/: params.yaml
manageimage/launch/: manageimage.launch.py
manageimage/manageimage/: image_segmentation.py  publisher_test.py  subscriber_test.py  utils.py  video_grabber.py  video_publisher_test.py
my_bags/: my_bags_0.db3
translation_broadcaster/: package.xml  setup.cfg  setup.py
translation_broadcaster/translation_broadcaster/: broadcaster.py
visualisation/: CMakeLists.txt  README.md  package.xml
visualisation/config/: params.yaml
visualisation/include/: drone_view.hpp
visualisation/launch/: visualisation.launch.py
visualisation/src/: 3dviz.cpp  drone_view.cpp  trajectory.cpp
